# templates

./: .clang-tidy  CMakeLists.txt  CMakeLists.txt.library  README.md  Tests.cmake.catch2  clazy_config  sonar-project.properties
.github/actions/setup-qt/: action.yml
.github/workflows/: build-and-test-cpp.yml  build-and-test-go.yml  build-and-test-py.yml  codeql-cpp.yml  pylint.yml  static-analysis-and-coverage-cpp.yml  static-analysis-and-coverage-py.yml
test/: CMakeLists.txt  CMakeLists.txt.catch2  CMakeLists.txt.gtest
tests/: CMakeLists.txt.catch2  CMakeLists.txt.gtest
